--- a/index.html
+++ b/index.html
@@ -1995,6 +1995,8 @@ Transformujte svoju stravu aj krásu silou pšeničnej trávy! 💚✨</pre>
     </div>
   </footer>
 
+    <script src="https://web.cmp.usercentrics.eu/modules/autoblocker.js"></script>
+    <script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="jtwRwSrkiadvj7" async></script>
 
   <script>
     // Smooth scrolling for navigation
