--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html lang="sk">
 <head>
+
+    <script src="https://web.cmp.usercentrics.eu/modules/autoblocker.js"></script>
+    <script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="jtwRwSrkiadvj7" async></script>
+    <script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-draft="true" data-settings-id="jtwRwSrkiadvj7" async></script>
+     <div class="uc-embed"></div>
+  
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MicroVitality - Čerstvá Mikrozeleninka</title>
@@ -1995,8 +2001,6 @@ Transformujte svoju stravu aj krásu silou pšeničnej trávy! 💚✨</pre>
     </div>
   </footer>
 
-    <script src="https://web.cmp.usercentrics.eu/modules/autoblocker.js"></script>
-    <script id="usercentrics-cmp" src="https://web.cmp.usercentrics.eu/ui/loader.js" data-settings-id="jtwRwSrkiadvj7" async></script>
 
   <script>
     // Smooth scrolling for navigation
