--- a/index.html
+++ b/index.html
@@ -242,6 +242,36 @@
       object-fit: cover;
     }
 
+    /* Štýly pre Cookies banner */
+    .cookie-banner {
+      position: fixed;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      background: rgba(0, 0, 0, 0.85);
+      color: #fff;
+      text-align: center;
+      padding: 1rem;
+      z-index: 9999;
+      display: none;
+    }
+    .cookie-banner p {
+      margin: 0 0 0.5rem 0;
+      font-size: 0.9rem;
+    }
+    .cookie-banner button {
+      padding: 0.5rem 1rem;
+      border: none;
+      background: #4caf50;
+      color: white;
+      font-size: 0.9rem;
+      cursor: pointer;
+    }
+    .cookie-banner a {
+      color: #8bc34a;
+      text-decoration: underline;
+    }
+  </style>
 </head>
 <body>
   <header>
