--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
 
 <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="6e2024ed-3fd4-47b7-80ab-3229b2e20220" type="text/javascript" async></script>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JRBC6426K0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'G-JRBC6426K0');
+</script>
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
