--- a/index.html
+++ b/index.html
@@ -2031,6 +2031,26 @@ Transformujte svoju stravu aj krásu silou pšeničnej trávy! 💚✨</pre>
       });
     });
   </script>
-
+<script>
+window.axeptioSettings = {
+  clientId: "67fe0fb37c0b8dfec6eeed91",
+  cookiesVersion: "microvitality-sk-EU",
+  googleConsentMode: {
+    default: {
+      analytics_storage: "denied",
+      ad_storage: "denied",
+      ad_user_data: "denied",
+      ad_personalization: "denied",
+      wait_for_update: 500
+    }
+  }
+};
+ 
+(function(d, s) {
+  var t = d.getElementsByTagName(s)[0], e = d.createElement(s);
+  e.async = true; e.src = "//static.axept.io/sdk.js";
+  t.parentNode.insertBefore(e, t);
+})(document, "script");
+</script>
 </body>
 </html>
