--- a/index.html
+++ b/index.html
@@ -2030,7 +2030,7 @@ Transformujte svoju stravu aj krásu silou pšeničnej trávy! 💚✨</pre>
         }
       });
     });
-  
+  <script>
 <script>
 window.axeptioSettings = {
   clientId: "67fe0fb37c0b8dfec6eeed91",
