--- a/index.html
+++ b/index.html
@@ -2033,7 +2033,7 @@ Transformujte svoju stravu aj krásu silou pšeničnej trávy! 💚✨</pre>
   <script>
     
 <script>
-window.axeptioSettings = {
+    window.axeptioSettings = {
   clientId: "67fe0fb37c0b8dfec6eeed91",
   cookiesVersion: "microvitality-sk-EU",
   googleConsentMode: {
@@ -2046,7 +2046,7 @@ window.axeptioSettings = {
     }
   }
 };
- 
+  </script>
 (function(d, s) {
   var t = d.getElementsByTagName(s)[0], e = d.createElement(s);
   e.async = true; e.src = "//static.axept.io/sdk.js";
