--- a/index.html
+++ b/index.html
@@ -1670,7 +1670,7 @@ Mungo fazuľové microgreens sú univerzálne! Vyskúšajte ich v neočakávaný
 • 🌯 V mexických burrito bowl – pridajte k čiernym fazuľám, kukurici a avokádu.
 • 🍣 V vegánskom sushi – nahraďte ryžu listom nori s microgreens a marinovaným tofu.
 • 🥥 V kokosových curry – posypte na thajskú zeleninovú polievku s kokosovým mliekom.
-• 🥗 V letných papárových rožkoch – zabalte s mangom, koriandrom a arašidovou omáčkou.
+• 🥗 V letných rolkách z ryžového papiera – zabaľte s mangom, koriandrom a arašidovou omáčkou.
 • 🍹 V detox green juice – zmiešajte s jablkom, zelerom a limetkou.
 • 🧁 Ako ozdobu na polievkové guľky – doplňte ich k wokovaným nudlím s sezamom.
 • 🍳 V špenátových frittatách – pridajte do zmesi s feta syrom a cherry paradajkami.
